Initialisation des commentaires pour la documentation des Order
